[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Models/hand2/HandMesh.gd" type="Script" id=1]
[ext_resource path="res://VRScript.gd" type="Script" id=2]
[ext_resource path="res://Torch.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Models/hand2/HandMesh.tscn" type="PackedScene" id=4]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="PlaneMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0 )

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 0.07, 0.02, 0.07 )

[sub_resource type="SphereShape" id=9]
radius = 0.05

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.1, 0.1, 0.1 )

[node name="ARVROrigin" type="ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.11459, 6.81516 )
script = ExtResource( 2 )

[node name="ARVRCamera" type="ARVRCamera" parent="."]
fov = 16.0
far = 999.0

[node name="Console3D" type="Sprite3D" parent="ARVRCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.087326, -0.594739, -4.29683 )
modulate = Color( 0, 1, 0, 1 )
billboard = 1
double_sided = false
texture = SubResource( 3 )

[node name="RedFilter" type="MeshInstance" parent="ARVRCamera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.94352 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Position3D_Left" type="Position3D" parent="ARVRCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.47593, 0, -1.41663 )

[node name="LeftController" type="ARVRController" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="LeftController"]
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="HandMesh" type="MeshInstance" parent="LeftController" instance=ExtResource( 4 )]
visible = false
mesh = SubResource( 10 )
material/0 = null
script = ExtResource( 1 )

[node name="LeftHandArea" type="Area" parent="LeftController"]

[node name="CollisionShape" type="CollisionShape" parent="LeftController/LeftHandArea"]
shape = SubResource( 9 )

[node name="RightController" type="ARVRController" parent="."]
controller_id = 2

[node name="MeshInstance" type="MeshInstance" parent="RightController"]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Torch" type="Spatial" parent="RightController" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.224462, 0, 0.631005 )
visible = false

[node name="Button" type="Button" parent="."]
anchor_left = 0.9
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
text = "Enter VR"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
